first routes working people and companies

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:display="http://www.w3.org/1999/xhtml" ng-app="app">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-resources.js"></script>
-    <script src="js/controller.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <script src="js/script.js"></script>
     <meta charset="UTF-8">
-    <title>Test Homepage</title>
+    <title>CRM</title>
 </head>
-<body ng-app="app" ng-controller="MyCtrl1">
-<h1>People</h1>
-<table width="70%" border="1" align="center">
-    <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Company</th>
-        <th>Phone</th>
-        <th>Email</th>
-        <th>TZ</th>
-    </tr>
-    <tr ng-repeat="person in people">
-        <td>{{ person.firstName }}</td>
-        <td>{{ person.lastName }}</td>
-        <td>{{ person.company }}</td>
-        <td>{{ person.phone }}</td>
-        <td>{{ person.email }}</td>
-        <td>{{ person.tz }}</td>
-    </tr>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/crm.css">
+<style>
+    body {
+        font-family: "Lato", sans-serif
+    }
+</style>
+<body>
 
-</table>
+<!-- Navbar -->
+<div class="w3-top">
+    <div class="w3-bar w3-black w3-card-2">
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
+           href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i
+                class="fa fa-bars"></i></a>
+        <a href="#/people" class="w3-bar-item w3-button w3-padding-large">PEOPLE</a>
+        <a href="#/companies" class="w3-bar-item w3-button w3-padding-large w3-hide-small">COMPANIES</a>
+        <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">COURSES</a>
+        <div class="w3-dropdown-hover w3-hide-small" display:none>
+            <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>
+            <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                <a href="#" class="w3-bar-item w3-button">Merchandise</a>
+                <a href="#" class="w3-bar-item w3-button">Extras</a>
+                <a href="#" class="w3-bar-item w3-button">Media</a>
+            </div>
+        </div>
+        <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i
+                class="fa fa-search"></i></a>
+    </div>
+</div>
+
+<br>
+<br>
+<ng-view></ng-view>
+
 </body>
 </html>
