--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,49 +1,182 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:display="http://www.w3.org/1999/xhtml" ng-app="app">
+<html lang="en" ng-app="StarterApp">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-resources.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
-    <script src="js/script.js"></script>
-    <meta charset="UTF-8">
-    <title>CRM</title>
+    <link rel="stylesheet" href="webjars/angular-material/1.1.3/angular-material.min.css">
+    <link rel="stylesheet" href="css/crm.css">
 </head>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/crm.css">
-<style>
-    body {
-        font-family: "Lato", sans-serif
-    }
-</style>
-<body>
-
-<!-- Navbar -->
-<div class="w3-top">
-    <div class="w3-bar w3-black w3-card-2">
-        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
-           href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i
-                class="fa fa-bars"></i></a>
-        <a href="#/people" class="w3-bar-item w3-button w3-padding-large">PEOPLE</a>
-        <a href="#/companies" class="w3-bar-item w3-button w3-padding-large w3-hide-small">COMPANIES</a>
-        <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">COURSES</a>
-        <div class="w3-dropdown-hover w3-hide-small" display:none>
-            <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>
-            <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                <a href="#" class="w3-bar-item w3-button">Merchandise</a>
-                <a href="#" class="w3-bar-item w3-button">Extras</a>
-                <a href="#" class="w3-bar-item w3-button">Media</a>
-            </div>
+<body layout="row" ng-controller="AppCtrl">
+<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+    <md-toolbar class="md-hue-2">
+        <span flex></span>
+    </md-toolbar>
+    <md-list>
+        <md-item ng-repeat="item in menu">
+            <a>
+                <md-item-content md-ink-ripple layout="row" layout-align="start center">
+                    <div class="inset">
+                        <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
+                    </div>
+                    <div class="inset">{{item.title}}
+                    </div>
+                </md-item-content>
+            </a>
+        </md-item>
+        <md-divider></md-divider>
+        <md-subheader>Management</md-subheader>
+        <md-item ng-repeat="item in admin">
+            <a>
+                <md-item-content md-ink-ripple layout="row" layout-align="start center">
+                    <div class="inset">
+                        <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
+                    </div>
+                    <div class="inset">{{item.title}}
+                    </div>
+                </md-item-content>
+            </a>
+        </md-item>
+    </md-list>
+</md-sidenav>
+<div layout="column" class="relative" layout-fill role="main">
+    <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="showAdd($event)">
+        <ng-md-icon icon="add"></ng-md-icon>
+    </md-button>
+    <md-toolbar ng-show="!showSearch">
+        <div class="md-toolbar-tools">
+            <md-button ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
+                <ng-md-icon icon="menu"></ng-md-icon>
+            </md-button>
+            <h3>
+                Dashboard
+            </h3>
+            <span flex></span>
+            <md-button aria-label="Search" ng-click="showSearch = !showSearch">
+                <ng-md-icon icon="search"></ng-md-icon>
+            </md-button>
+            <md-button aria-label="Open Settings" ng-click="showListBottomSheet($event)">
+                <ng-md-icon icon="more_vert"></ng-md-icon>
+            </md-button>
         </div>
-        <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i
-                class="fa fa-search"></i></a>
-    </div>
+        <md-tabs md-stretch-tabs class="md-primary" md-selected="data.selectedIndex">
+            <md-tab id="tab1" aria-controls="tab1-content">
+                Latest
+            </md-tab>
+            <md-tab id="tab2" aria-controls="tab2-content">
+                Favorites
+            </md-tab>
+        </md-tabs>
+    </md-toolbar>
+    <md-toolbar class="md-hue-1" ng-show="showSearch">
+        <div class="md-toolbar-tools">
+            <md-button ng-click="showSearch = !showSearch" aria-label="Back">
+                <ng-md-icon icon="arrow_back"></ng-md-icon>
+            </md-button>
+            <h3 flex="10">
+                Back
+            </h3>
+            <md-input-container md-theme="input" flex>
+                <label>&nbsp;</label>
+                <input ng-model="search.who" placeholder="enter search">
+            </md-input-container>
+            <md-button aria-label="Search" ng-click="showSearch = !showSearch">
+                <ng-md-icon icon="search"></ng-md-icon>
+            </md-button>
+            <md-button aria-label="Open Settings" ng-click="showListBottomSheet($event)">
+                <ng-md-icon icon="more_vert"></ng-md-icon>
+            </md-button>
+        </div>
+
+    </md-toolbar>
+    <md-content flex md-scroll-y>
+        <ui-view layout="column" layout-fill layout-padding>
+            <div class="inset" hide-sm></div>
+            <ng-switch on="data.selectedIndex" class="tabpanel-container">
+                <div role="tabpanel"
+                     id="tab1-content"
+                     aria-labelledby="tab1"
+                     ng-switch-when="0"
+                     md-swipe-left="next()"
+                     md-swipe-right="previous()"
+                     layout="row" layout-align="center center">
+                    <md-card flex-gt-sm="90" flex-gt-md="80">
+                        <md-card-content>
+                            <h2>Activity</h2>
+                            <md-list>
+                                <md-item ng-repeat="item in activity | filter:search">
+                                    <md-item-content>
+                                        <div class="md-tile-left inset" hide-sm>
+                                            <user-avatar></user-avatar>
+                                        </div>
+                                        <div class="md-tile-content">
+                                            <h3>{{item.what}}</h3>
+                                            <h4>{{item.who}}</h4>
+                                            <p>
+                                                {{item.notes}}
+                                            </p>
+                                        </div>
+                                    </md-item-content>
+                                    <md-divider md-inset hide-sm ng-if="!$last"></md-divider>
+                                    <md-divider hide-gt-sm ng-if="!$last"></md-divider>
+                                </md-item>
+                                <md-divider></md-divider>
+                                <md-item layout class="inset">
+                                    <md-button layout layout-align="start center" flex class="md-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg> More
+                                    </md-button>
+                                </md-item>
+                            </md-list>
+                        </md-card-content>
+                    </md-card>
+                </div>
+                <div role="tabpanel"
+                     id="tab2-content"
+                     aria-labelledby="tab2"
+                     ng-switch-when="1"
+                     md-swipe-left="next()"
+                     md-swipe-right="previous()"
+                     layout="row" layout-align="center center">
+                    <md-card flex-gt-sm="90" flex-gt-md="80">
+                        <md-card-content>
+                            <h2>Favorites</h2>
+                            <md-list>
+                                <md-item ng-repeat="item in activity | filter:search | orderBy:'-what'">
+                                    <md-item-content>
+                                        <div class="md-tile-left inset" hide-sm>
+                                            <user-avatar></user-avatar>
+                                        </div>
+                                        <div class="md-tile-content">
+                                            <h3>{{item.what}}</h3>
+                                            <h4>{{item.who}}</h4>
+                                            <p>
+                                                {{item.notes}}
+                                            </p>
+                                        </div>
+                                    </md-item-content>
+                                    <md-divider md-inset hide-sm ng-if="!$last"></md-divider>
+                                    <md-divider hide-gt-sm ng-if="!$last"></md-divider>
+                                </md-item>
+                                <md-divider></md-divider>
+                                <md-item layout class="inset">
+                                    <md-button layout layout-align="start center" flex class="md-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg> More
+                                    </md-button>
+                                </md-item>
+                            </md-list>
+                        </md-card-content>
+                    </md-card>
+                </div>
+
+            </ng-switch>
+
+        </ui-view>
+    </md-content>
 </div>
+<!-- Angular Material Dependencies -->
+<script src="webjars/angular/1.6.4/angular.min.js"></script>
+<script src="webjars/angular-animate/1.6.4/angular-animate.min.js"></script>
+<script src="webjars/angular-aria/1.6.4/angular-aria.min.js"></script>
 
-<br>
-<br>
-<ng-view></ng-view>
+<script src="webjars/angular-material/1.1.3/angular-material.min.js"></script>
 
+<script src="webjars/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
