ng-route working added companies

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,15 +5,16 @@
     <link rel="stylesheet" href="css/crm.css">
 </head>
 <body layout="row" ng-controller="AppCtrl">
-<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left"
+<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-personId="left"
             md-is-locked-open="$mdMedia('gt-md')">
     <md-toolbar class="md-hue-2">
         <span flex></span>
     </md-toolbar>
     <md-list>
-        <md-item ng-repeat="item in menu">
+        <md-list-item ng-repeat="item in menu" ng-click="changePath(item.link, item.title)">
             <a>
-                <md-item-content md-ink-ripple layout="row" layout-align="start center">
+                <md-item-content md-ink-ripple layout="row"
+                                 layout-align="start center">
                     <div class="inset">
                         <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
                     </div>
@@ -21,10 +22,10 @@
                     </div>
                 </md-item-content>
             </a>
-        </md-item>
+        </md-list-item>
         <md-divider></md-divider>
         <md-subheader>Management</md-subheader>
-        <md-item ng-repeat="item in admin">
+        <md-list-item ng-repeat="item in admin">
             <a>
                 <md-item-content md-ink-ripple layout="row" layout-align="start center">
                     <div class="inset">
@@ -34,7 +35,7 @@
                     </div>
                 </md-item-content>
             </a>
-        </md-item>
+        </md-list-item>
     </md-list>
 </md-sidenav>
 <div layout="column" class="relative" layout-fill role="main">
@@ -47,7 +48,7 @@
                 <ng-md-icon icon="menu"></ng-md-icon>
             </md-button>
             <h3>
-                Dashboard
+                {{title}}
             </h3>
             <span flex></span>
             <md-button aria-label="Search" ng-click="showSearch = !showSearch">
@@ -79,35 +80,13 @@
         </div>
 
     </md-toolbar>
-    <md-content flex md-scroll-y>
-        <div ng-controller="peopleController" layout="margin">
-            <mdt-table mdt-row="{
-                      data: people,
-                      'column-keys': [
-                          'id',
-                          'firstName',
-                          'lastName',
-                          'company',
-                          'phone',
-                          'email',
-                          'tz'
-                      ]
-                      }">
-                <mdt-header-row>
-                    <mdt-column align-rule="left">ID</mdt-column>
-                    <mdt-column align-rule="left">First Name</mdt-column>
-                    <mdt-column align-rule="left">Last Name</mdt-column>
-                    <mdt-column align-rule="left">Company</mdt-column>
-                    <mdt-column align-rule="left">Phone #</mdt-column>
-                    <mdt-column align-rule="left">Email</mdt-column>
-                    <mdt-column align-rule="left">Identification #</mdt-column>
-                </mdt-header-row>
-            </mdt-table>
-        </div>
+    <md-content flex="100" md-scroll-y>
+        <div ng-view></div>
     </md-content>
 </div>
 <!-- Angular Material Dependencies -->
 <script src="webjars/angular/1.5.8/angular.min.js"></script>
+<script src="webjars/angular-route/1.5.8/angular-route.min.js"></script>
 <script src="webjars/angular-animate/1.5.8/angular-animate.min.js"></script>
 <script src="webjars/angular-aria/1.5.8/angular-aria.min.js"></script>
 
