inline icons + rowId working!

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -99,6 +99,6 @@
 
 <script src="webjars/github-com-iamisti-mdDataTable/2.2.0/md-data-table-templates.js"></script>
 <script src="webjars/github-com-iamisti-mdDataTable/2.2.0/md-data-table.js"></script>
-<script src="js/script.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
