--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 <!-- Side Navigation -->
 <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left"
             md-is-locked-open="$mdMedia('gt-md')">
-    <md-toolbar style="background-color:#AAAAAA;">
+    <md-toolbar style="background-color:white;">
         <!-- TODO: CHANGE IMAGE!!! -->
         <img ng-src="images/logo.png" height="50">
     </md-toolbar>
@@ -41,10 +41,6 @@
     </md-list>
 </md-sidenav>
 <div layout="column" class="relative" layout-fill role="main">
-    <!-- Add Floating Button -->
-    <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="showAdd($event)">
-        <ng-md-icon icon="add"></ng-md-icon>
-    </md-button>
     <!-- Main Toolbar (+ search and more icons) -->
     <md-toolbar ng-show="!showSearch">
         <div class="md-toolbar-tools">
